# test

./: CMakeLists.txt  build.sh  main.c
utils/: CMakeLists.txt  huffman.c  logger.c  logger.h
